# NfBnf

./: .env.example  .gitignore  .gitmodules  BOT_ROADMAP.md  Install-ML-Extras.cmd  Preview-ML-HF-Stream.cmd  README.md  Run-ML-Ingest-DataForML.cmd  Start-JARVIS.cmd  Start-QuantTape.cmd  plan.docx  pyproject.toml
examples/: ml_hf_stream_skeleton.py
nbnf/: __init__.py  data.py  http_client.py  llm_remote.py  market_yfinance.py  settings.py
nbnf/brain/: __init__.py  ai_core.py  engine.py  fusion.py  jsonutil.py  ml_core.py  types.py
nbnf/dhan/: __init__.py  config.py  market_feed.py
nbnf/india/: __init__.py  constituents.py  market_clock.py
nbnf/jarvis/: __init__.py  briefing.py  persona.py
nbnf/ml/: __init__.py  features.py  findings.py  hf_cli.py  hf_pack.py  ingest.py  ingest_cli.py  training_set.py
nbnf/options/: __init__.py  local_chain.py
nbnf/quanttape/: __init__.py  briefing.py  persona.py
nbnf/research/: __init__.py  backtest.py  readiness.py
nbnf/server/: __init__.py  analyze.py  app.py  db.py  learn.py  main.py  paths.py  research.py  ws.py
nbnf/yahoo_study/: __init__.py  study.py
scripts/windows/: Install-ML-Extras.cmd  Preview-ML-HF-Stream.cmd  Run-ML-Ingest-DataForML.cmd  Start-QuantTape.cmd
static/: app.js  index.html  styles.css
