[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nbnf"
version = "0.1.0"
description = "Indian equity research/trading helpers: pandas locally, intelligence via HTTP APIs."
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nbnf*"]

[tool.ruff]
line-length = 100
target-version = "py311"
