[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nbnf"
version = "0.1.0"
description = "Indian equity research/trading helpers: pandas locally, intelligence via HTTP APIs."
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "httpx>=0.27",
  "python-dotenv>=1.0",
  "yfinance>=0.2.40",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
]

[project.scripts]
nbnf-serve = "nbnf.server.main:run"
nbnf-ml-ingest = "nbnf.ml.ingest_cli:main"
nbnf-ml-hf = "nbnf.ml.hf_cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]
data = ["openpyxl>=3.1", "pyarrow>=15.0"]
hf = ["datasets>=3.0", "huggingface_hub>=0.24"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nbnf*"]

[tool.ruff]
line-length = 100
target-version = "py311"
